# scam_annalyzer

./: .gitignore  README.md  pyproject.toml  test.py
catchaProject/: __main__.py  audioProcessing.py  bert.py  bot.py  checkScam.py  config.py  datasetPreprocessing.py
config/: .env.example  config.toml
data/dataset/: names.txt  single-agent-scam-dialogue_all.csv
