[project]
name = "catcha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "hf-xet>=1.1.10",
    "librosa>=0.11.0",
    "python-ffmpeg>=2.0.12",
    "torch>=2.8.0",
    "whisperx>=3.4.2",
]

[tool.setuptools]
packages = ["catchaProject"]
