[project]
name = "catcha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "dotenv>=0.9.9",
    "flashtext>=2.7",
    "hf-xet>=1.1.10",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "plotly>=6.3.0",
    "python-ffmpeg>=2.0.12",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "whisperx>=3.4.2",
    "wordcloud>=1.9.4",
]

[tool.setuptools]
packages = ["catchaProject"]
